# zed

./: Cargo.toml
.github/workflows/: build_llm_server.yml
crates/client/src/: client.rs
crates/zed_llm_server/: Cargo.toml
crates/zed_llm_server/src/: llm_client.rs  main.rs
