[package]
name = "zed_llm_server"
version = "0.167.1"
edition = "2021"

[dependencies]
anyhow.workspace = true
client.workspace = true
env_logger.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
proto.workspace = true
release_channel.workspace = true
reqwest_client.workspace = true
settings.workspace = true
smol.workspace = true
