[package]
name = "zed_llm_server"
version = "0.167.1"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { version = "0.6", features = ["json", "headers"] }
axum-extra = { version = "0.4", features = ["erased-json"] }
bytes.workspace = true
client.workspace = true
env_logger.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
proto.workspace = true
release_channel.workspace = true
reqwest_client.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
tokio = { workspace = true, features = ["full"] }
